[tool.poetry]
name = "mmmeta"
version = "0.4.4"
description = "Manage file metadata cloud ready"
authors = ["Simon Wörpel <simon.woerpel@pm.me>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
typer = "^0.9.0"
SQLAlchemy = "^2.0.27"
pydantic = "^2.6.1"
banal = "^1.0.6"
PyYAML = "^6.0.1"
structlog = "^24.1.0"
anystore = "^0.0.4"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
ipdb = "^0.13.13"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pre-commit = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
